custom-apps/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: plex-support
spec:
  selector:
    app: calibre
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
